--- a/feature-pokedex/build.gradle
+++ b/feature-pokedex/build.gradle
@@ -43,11 +43,17 @@ dependencies {
     implementation project(":core-common")
     implementation project(":infrastructure")
 
+    //Coil
+    // Coil Library Dependencies
+    implementation "io.coil-kt:coil-compose:2.1.0"
+    implementation "io.coil-kt:coil-svg:1.3.2"
+
     //Compose
     implementation "androidx.navigation:navigation-compose:$nav_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.1.0-alpha03'
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.compose.material:material:1.3.1"
 
     //Hilt
     implementation "com.google.dagger:hilt-android:2.42"
@@ -61,4 +67,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 }
