--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ android {
 
 dependencies {
     implementation project(":feature-pokedex")
+    implementation project(":core-designsystem")
 
 
     //Hilt
