--- a/core-designsystem/build.gradle
+++ b/core-designsystem/build.gradle
@@ -21,6 +21,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion "$compose_version"
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -31,6 +37,10 @@ android {
 }
 
 dependencies {
+
+    implementation "androidx.compose.ui:ui:$compose_version"
+
+    implementation 'androidx.compose.material3:material3:1.1.0-alpha03'
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
