--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation project(":feature-pokedex")
     implementation project(":core-designsystem")
 
+    implementation 'com.google.android.material:material:1.7.0'
 
     //Hilt
     implementation "com.google.dagger:hilt-android:2.42"
