--- a/networking/build.gradle
+++ b/networking/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 android {
-    namespace 'com.stevecampos.infrastructure'
+    namespace 'com.stevecampos.networking'
     compileSdk 33
 
     defaultConfig {
@@ -33,23 +33,15 @@ android {
 }
 
 dependencies {
-    implementation project(":domain")
-    implementation project(":core-common")
-    implementation project(":networking")
-
-    // networking
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     //Hilt
     implementation "com.google.dagger:hilt-android:2.42"
     kapt "com.google.dagger:hilt-compiler:2.42"
 
-    /*
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
-    */
+    // networking
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
